2001-10-12  Sam Steingold  <sds@gnu.org>

	* net/ange-ftp.el (ange-ftp-copy-files-async): New function for
	asynchronous multiple file copying.

2001-10-12  Gerd Moellmann  <gerd@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-check-lambda-list): New
	function checking that lambda-list consists of non-constant
	symbols, that &rest and &optional are followed by variable names,
	that &rest VAR is the last element, and that variables aren't
	doubled.
	(byte-compile-lambda): Use it.

2001-10-12  Eli Barzilay <eli@barzilay.org>

	* calculator.el (calculator-eng-display): Don't call concat
	with an integer argument.

2001-10-12  Miles Bader  <miles@gnu.org>

	* help-mode.el (help-customize-face): New button-type.

	* faces.el (list-faces-display): Fix args to `help-xref-button'.
	(describe-face): Fix args to `help-xref-button'.
	Don't switch to help-buffer around call to `help-setup-xref'.
	Use `help-buffer' instead of hard-wired "*Help*".
	Require `help-mode'.

2001-10-11  Stefan Monnier  <monnier@cs.yale.edu>

	* net/goto-addr.el (goto-address-mail-regexp): Allow + in username.

	* help-mode.el (help-buffer): New function.
	Returns the buffer-name to use for help output.
	Change all the code to use it instead of hard-coding *Help*.
	(help-mode-map): Put back the mouse-2 binding.
	(help-xref-stack): Change the format and make buffer-local.
	(help-xref-stack-item): Make buffer-local.
	(help-setup-xref): Do the `push' here rather than in help-do-xref.
	(help-xref-interned): Display the face doc as well.
	(help-follow-mouse): Re-introduce.
	(help-xref-go-back): Adapt to the new use of help-xref-stack.
	(help-do-xref): Don't `push' any more.
	(help-follow): Also follow face names.

	* help-funs.el (describe-function-1): Remove unused `parens' arg.
	Don't call help-setup-xref anymore and remove its `interactive-p' arg.
	Autoload and cleanup.
	(describe-function): Call help-setup-xref.
	(describe-variable): Call help-setup-xref earlier.
